--- a/style/admin/category.css
+++ b/style/admin/category.css
@@ -78,6 +78,12 @@
   }
 
 /* CHECKBOX */
+.category-table{
+  width:100%;
+  height:90vh;
+  position: relative;
+  overflow: scroll;
+}
 .category-table input[type="checkbox"] {
   display: none;
   }
