--- a/style/admin/modify.css
+++ b/style/admin/modify.css
@@ -18,9 +18,11 @@
     border-radius: 4px;
   }
   /* banner css */
+
   .banner_class{
       width:100%;
       height: 90vh;
+      display: block;
     }
 
     .banner_class input[type="text"]{
@@ -182,63 +184,59 @@
   .location_class{
       margin:2% 0 0 0;
       text-align: center;
-      width: 100%;
+      display:none
     }
     .location_class button{border-radius:20px;}
     .location_iframe{margin:5vh 0 0 0vw;}
 
   /* description css */
-  .description_class{}
-    .dascription_form{
-      width: 98%;
-      height: 90vh;
-      display: grid;
-      margin-left: 1%;
-      grid-template-rows:2;
-      grid-template-columns: 40% 30% 30%;
-    }
-    .test1,.test2,.test3,.test4,.test5,.test6{
-      width: 100%;
-      height: 40vh;
-      text-align: center;
-      justify-content: center;
-    }
+  .description{
+    display: flex;
+    width: 100%;
+    height: 40vh;
+    margin:2% 0 2% 0;
+    align-items: center;
+    justify-content:space-around;
+  }
+  .description > div{
+    height: 35vh;
+    width: 45%;
+  }
 
-    .test1 img{ width: 100%; height: 40vh; }
-    .test1 { grid-column:1; grid-row:1; }
-    .test2 { grid-column:2; grid-row:1; }
-    .test2 p{
-      margin:8vh 0 0 0;
-      align-items: center;
-      font-size: 1.5vw;
-    }
+  .description-image{
+    justify-content:center;
+    align-items: center;
+    display: flex;
+  }
+  .description > .left{
+    background: url("../../resource/index/desc2.jpg") no-repeat ;
+    background-size: 100%;
+  }
+  .description > .right{
+    background: url("../../resource/index/desc1.jpg")  no-repeat ;
+    background-size: 100%;
+  }
 
-    .test3{ grid-column:3; grid-row:1; }
-    .test3 textarea{
-      width: 98%;
-      outline: 0;
-      height:16vh;
-      resize: none;
-      margin:4vh 0 0 1%;
-    }
-    .test3 img{height:10vh;}
-    .test3 button{
-      border-radius: 25px;
-      margin-top: 2vh;
-    }
-    .test4{
-      background: blue;
-      grid-column: 1;
-      grid-row: 2;
-    }
-    .test5{
-      background: green;
-      grid-column: 2;
-      grid-row: 2;
-    }
-    .test6{
-      background: brown;
-      grid-column: 3;
-      grid-row: 2;
-    }
-  #banner_form,#location_form,#description_form,#catalog_form{display: none;margin:3% 0 0 5%;}
+  .description-image  label{
+    width:30%;
+    opacity: 0;
+    height: 25vh;
+  }
+  .description-image  img{
+    width: 100%;
+    height: 100%;
+  }
+  .description-image:hover > label{
+    opacity: 1;
+    cursor: pointer;
+    transition:all 0.5s;
+  }
+
+
+  .description > div textarea{
+    padding:5%;
+    width: 100%;
+    height: 28.5vh;
+    font-size: 1.5vw;
+  }
+  .description > div button{ width: 100%; }
