--- a/style/admin/mod.css
+++ b/style/admin/mod.css
@@ -1,19 +1,20 @@
 .customize-header{
   width: 100%;
   height: 10vh;
-  display: flex;
   font-size:1.7vw;
   background:#fff;
+  display: flex;
   align-items: center;
   justify-content:space-around;
 }
-.customize-header button{ height:70%; }
+.customize-header button { height:70%; }
 
 .modify{
   letter-spacing: 1px;
   text-align: center;
   word-spacing:4px;
   display: none;
+  background: red;
   padding:1% 3%;
   height:auto;
 }
