--- a/style/admin.css
+++ b/style/admin.css
@@ -1,45 +1,6 @@
-:root{
-  --blue:#2196F3;
-}
-body{
-  margin:0;
-  padding:0;
-  user-select: none;
-  box-sizing: border-box;
-}
-a{
-  text-decoration: none;
-}
-input[type="file"]{ display: none; }
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button{
-  -webkit-appearance: none; }
-
-input,button,textarea,select,iframe{
-  letter-spacing: 2px;
-  border-radius:3px;
-  outline:0;
-  border:0;
-  width:20%;
-  height:5vh;
-}
-button{
-  height:6vh;
-  cursor:pointer;
-  transition: all 1s;
-  background-color: var(--blue);
-  color:#fff;
-}
-button:hover{
-  background-color:#eee;
-  color:#333;
-}
-
 /* SIDE MENU */
   .Cpanel,
-  #Panel-head,
-  #Panel-icons,
-  #Panel-words{
+  .Cpanel > div{
     width:100%;
     height:90vh;
     font-size:1.7vw;
@@ -48,7 +9,9 @@ button:hover{
     flex-direction: column;
     justify-content: space-around;
   }
-  .Cpanel{
+  .Cpanel{-webkit-box-shadow: 2px 0px 9px -1px rgba(0,0,0,0.75);
+-moz-box-shadow: 2px 0px 9px -1px rgba(0,0,0,0.75);
+box-shadow: 2px 0px 9px -1px rgba(0,0,0,0.75);
     color:#fff;
     width: 20%;
     height: 100vh;
@@ -60,11 +23,11 @@ button:hover{
   #Panel-head{
     height:10vh;
     color:#333;
-    background: #fff;
+    background-color: #fff;
   }
-  #panelToggler{
-    right:0;
-    width:20%;
+  #Panel-icons{ display: none; }
+  .panelToggler{
+    right:1vw;
     cursor: pointer;
     position:absolute;
   }
@@ -91,12 +54,12 @@ button:hover{
     transform: rotate(0) ;
   }
 
-  #Panel-icons{ display: none; }
 /* ALL SECTIONS */
   .section{
     float:right;
     width:80%;
     height: 100vh;
     display: none;
+    transition: all 1s;
     background-color: #eee;
   }
