indexis css is chasworeba

--- a/style/admin/mo.css
+++ b/style/admin/mo.css
@@ -48,7 +48,7 @@
 }
 
 /* catalog css */
-.Admin-gallery-cell,
+.gallery-cell,
 .carousel, .New-cell{
   color:white;
   font-size:10vw;
@@ -66,19 +66,20 @@
   cursor: pointer;
   background: var(--blue);
 }
-.Admin-gallery{
+.gallery{
   width:80%;
   height:35vh;
 }
-.Admin-gallery-cell {
+.gallery-cell {
   width: 20%;
   height: 35vh;
   counter-increment: gallery-cell;
 }
-.Admin-gallery-cell img {
+.gallery-cell img {
   width: 100%;
   height: 100%;
 }
+
 
 .dark-bg {
   top: 0;
