--- a/style/admin.css
+++ b/style/admin.css
@@ -9,9 +9,8 @@
     flex-direction: column;
     justify-content: space-around;
   }
-  .Cpanel{-webkit-box-shadow: 2px 0px 9px -1px rgba(0,0,0,0.75);
--moz-box-shadow: 2px 0px 9px -1px rgba(0,0,0,0.75);
-box-shadow: 2px 0px 9px -1px rgba(0,0,0,0.75);
+  .Cpanel i {cursor: pointer;}
+  .Cpanel{
     color:#fff;
     width: 20%;
     height: 100vh;
@@ -19,6 +18,9 @@ box-shadow: 2px 0px 9px -1px rgba(0,0,0,0.75);
     position: fixed;
     justify-content: center;
     background-color:var(--blue);
+    -webkit-box-shadow: 2px 0px 9px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 2px 0px 9px -1px rgba(0,0,0,0.75);
+    box-shadow: 2px 0px 9px -1px rgba(0,0,0,0.75);
   }
   #Panel-head{
     height:10vh;
