1.sofia font added 2.langauge dropdown changed 3.cleanning code index.css 3.changed header in index and product

--- a/style/fo.css
+++ b/style/fo.css
@@ -11,3 +11,4 @@
 @font-face { font-family: erti_zomis_gashlili_wierdo; src: url('../Fonts/TTFs/erti_zomis_gashlili_wierdo.ttf'); }
 @font-face { font-family: mixril_moxrili_lamazzsdavudzaxebdi; src: url('../Fonts/TTFs/mixril_moxrili_lamazzsdavudzaxebdi.ttf'); }
 @font-face { font-family: vazi; src: url('../Fonts/TTFs/vazi.ttf'); }
+@font-face { font-family: sofia; src: url('../Fonts/TTFs/sofia.ttf'); }
