--- a/style/ind.css
+++ b/style/ind.css
@@ -43,14 +43,25 @@
     position: absolute;
   }
   .language {
+    text-align: center;
+    width:3vw;
     right:5vw;
     font-size:1.6vw;
+    position: absolute;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+  }
+  .language > div {
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    width:inherit;
+    background: #fff;
     position: absolute;
   }
   .language > div {display: none;}
 
   /* HOME */
-  .Poster{
+  #Poster{
     width:100vw;
     height:75vh;
     opacity: 0.9;
@@ -65,12 +76,14 @@
     background-repeat: no-repeat;
   }
 
-  .Poster h1{
+  #Poster h1{
     color:white;
     font-size:8vw;
+    font-family:'sofia';
+    letter-spacing: 8px;
     text-shadow: 4px 5px 0px rgba(0,0,0,0.53);
   }
-  .Poster button{
+  #Poster button{
     width:8%;
     height: 7vh;
     color:#464646;
@@ -82,7 +95,7 @@
     -moz-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.75);
   }
-  .Poster button:hover {background-color: #DBD8D6;}
+  #Poster button:hover {background-color: #DBD8D6;}
 
   .Search {
     z-index: -1;
@@ -138,9 +151,9 @@
   }
 
   /* LOCATION */
-  .Location{
-    padding:3%;
-    height:90vh;
+  #Location{
+    padding:5% 3%;
+    height:100vh;
     color:black;
     font-size: 1.7vw;
     font-family: 'bold_politika';
@@ -149,13 +162,13 @@
     flex-direction: column;
     justify-content: space-between;
   }
-  .Location iframe{
+  #Location iframe{
     width:80vw;
     height: 80vh;
   }
 
   /* CONTACT */
-  .Contact{
+  #Contact{
     transition: all 0.5s ease-in-out;
     background: url("../resource/index/contact.png") no-repeat;
     background-size: 100vw 100vh;
@@ -166,7 +179,7 @@
     align-items: center;
     justify-content: flex-end;
   }
-  .Contact form{
+  #Contact form{
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -187,24 +200,24 @@
     -moz-box-shadow: 9px 6px 9px 2px rgba(0,0,0,0.75);
     box-shadow: 9px 6px 9px 2px rgba(0,0,0,0.75);
   }
-  .Contact form:hover{
+  #Contact form:hover{
     -webkit-box-shadow: 6px 4px 10px 11px rgba(0,0,0,0.75);
     -moz-box-shadow: 6px 4px 10px 11px rgba(0,0,0,0.75);
     box-shadow: 6px 4px 10px 11px rgba(0,0,0,0.75);
   }
 
-  .Contact input,.Contact textarea{
+  #Contact input, #Contact textarea{
     width:60%;
     padding:3%;
     font-size:1vw;
     font-family: 'mkrtali_grdzeli';
     border:0.5px solid #C6C0C0;
   }
-  .Contact textarea{
+  #Contact textarea{
     height:20vh;
     resize: none;
   }
-  .Contact button{
+  #Contact button{
     width:40%;
     color:white;
     font-size: 1.6vw;
@@ -215,9 +228,9 @@
 
   /* ABOUT */
   .Description{
-    padding:12% 5%;
+    padding:13% 5%;
     width:100%;
-    height:40vh;
+    height:35vh;
     font-size: 1.7vw;
     display: flex;
     align-items: center;
@@ -246,6 +259,7 @@
     font-size:1.1vw;
   }
   .info{
+    font-family:'sofia';
     width:33%;
     height:100%;
     display: flex;
@@ -259,7 +273,7 @@
   }
   .copy-right{
     font-size: 1vw;
-    margin-left:auto;
+    margin:auto 0 0 auto;
   }
   .Footer i{
     cursor: pointer;
